# PulseLauncher

./: .gitignore  CMakeLists.txt
data/: launcher.db
src/: main.cpp
src/app/: Application.cpp  Application.h  GUI.cpp  GUI.h  Launcher.cpp  Launcher.h  Window.cpp  Window.h
src/core/: Application.cpp  Application.h  Window.cpp  Window.h  main.cpp
src/data/: Database.cpp  Database.h
src/models/: Game.h
src/services/: DatabaseService.cpp  DatabaseService.h  LauncherService.cpp  LauncherService.h
src/ui/: AddGamePopup.cpp  AddGamePopup.h  GameListView.cpp  GameListView.h  MainLayout.cpp  MainLayout.h  UIManager.cpp  UIManager.h
